Update social media

--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
     defer></script>
   <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet"
     crossorigin="anonymous">
-
+  <link rel="icon" href="img/LogoWarunghati-Transparant-01.png" type="image/x-icon">
   <title>About Us</title>
 </head>
 
@@ -64,6 +64,11 @@
           </a>
         </div>
         <div class="link-canvas">
+          <a href="aboutus.html">
+            <h1>About Us</h1>
+          </a>
+        </div>
+        <div class="link-canvas">
           <a href="menu.html">
             <h1>Menu</h1>
           </a>
@@ -71,11 +76,6 @@
         <div class="link-canvas">
           <a href="mealplans.html">
             <h1>Meal Plans</h1>
-          </a>
-        </div>
-        <div class="link-canvas">
-          <a href="aboutus.html">
-            <h1>About Us</h1>
           </a>
         </div>
       </div>
@@ -405,18 +405,15 @@
         <div class="col-3">
           <h4>Warung Hati</h4>
         </div>
-        <div class="col text-end">
+        <div class="col text-end ">
           <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
             <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
           </a>
-          <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
+          <a href="https://www.facebook.com/profile.php?id=100080306831431" aria-label="go to facebook" class="text-decoration-none">
             <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
           </a>
           <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
             <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
-          </a>
-          <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
-            <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
           </a>
         </div>
         <hr class="mt-1" />
