--- a/mealplans.html
+++ b/mealplans.html
@@ -15,6 +15,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="icon" href="img/LogoWarunghati-Transparant-01.png" type="image/x-icon">
 </head>
 
 <body>
@@ -61,6 +62,11 @@
                     </a>
                 </div>
                 <div class="link-canvas">
+                    <a href="aboutus.html">
+                        <h1>About Us</h1>
+                    </a>
+                </div>
+                <div class="link-canvas">
                     <a href="menu.html">
                         <h1>Menu</h1>
                     </a>
@@ -68,11 +74,6 @@
                 <div class="link-canvas">
                     <a href="mealplans.html">
                         <h1>Meal Plans</h1>
-                    </a>
-                </div>
-                <div class="link-canvas">
-                    <a href="aboutus.html">
-                        <h1>About Us</h1>
                     </a>
                 </div>
             </div>
@@ -95,7 +96,8 @@
                 <div class="container text-center card-plan">
                     <img class="img-plans" style="object-position: 70% 50%;" src="img/Menu_Utama/Nasi Pecel 2.png">
                     <h1 class="my-2 text-center title-plan">Sapu Jagad</h1>
-                    <p class="desk-plan">Selection of healthy meals to support the immune system and improve stamina.</p>
+                    <p class="desk-plan">Selection of healthy meals to support the immune system and improve stamina.
+                    </p>
                     <h3>Goal </h3>
                     <p class="desk-plan">Immune booster, increase energy and stamina</p>
                     <h3>Menu </h3>
@@ -122,7 +124,7 @@
                         <p class="desk-plan">Detoxification, hormone balancing, and healing </p>
                         <h3>Menu </h3>
                         <p class="desk-plan">Ketoprak bumbu mente with steamed organic tofu, tempeh, and boiled egg</p>
-                        <h3>Include  </h3>
+                        <h3>Include </h3>
                         <ul class="list-group my-2">
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
@@ -149,7 +151,7 @@
                             unhealthy food</p>
                         <h3>Menu </h3>
                         <p class="desk-plan">Gado-gado bumbu kenari with organic tofu and omega egg</p>
-                        <h3>Include  </h3>
+                        <h3>Include </h3>
                         <ul class="list-group my-2">
                             <li class="list-group-item">6 days package</li>
                             <li class="list-group-item">2 healthy main course</li>
@@ -196,20 +198,17 @@
                 <div class="col-3">
                     <h4>Warung Hati</h4>
                 </div>
-                <div class="col text-end">
+                <div class="col text-end ">
                     <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
-                        <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
+                      <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
                     </a>
-                    <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
-                        <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
+                    <a href="https://www.facebook.com/profile.php?id=100080306831431" aria-label="go to facebook" class="text-decoration-none">
+                      <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
                     </a>
                     <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
-                        <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
+                      <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
                     </a>
-                    <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
-                        <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
-                    </a>
-                </div>
+                  </div>
                 <hr class="mt-1" />
                 <div class="text-center">
                     <p>@copyright by Warung Hati.</p>
