--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,7 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Menu</title>
+  <link rel="icon" href="img/LogoWarunghati-Transparant-01.png" type="image/x-icon">
 </head>
 
 <body>
@@ -62,6 +63,11 @@
           </a>
         </div>
         <div class="link-canvas">
+          <a href="aboutus.html">
+            <h1>About Us</h1>
+          </a>
+        </div>
+        <div class="link-canvas">
           <a href="menu.html">
             <h1>Menu</h1>
           </a>
@@ -69,11 +75,6 @@
         <div class="link-canvas">
           <a href="mealplans.html">
             <h1>Meal Plans</h1>
-          </a>
-        </div>
-        <div class="link-canvas">
-          <a href="aboutus.html">
-            <h1>About Us</h1>
           </a>
         </div>
       </div>
@@ -772,7 +773,17 @@
       </div>
     </div>
   </div>
-  </div>
+
+  <!-- <div class="food">
+    <div class="food-image">
+      <img src="img/Menu_Utama/Gado-Gado 3.png">
+    </div>
+    <div class="food-text">
+      <h2 class="food-title">Gado-Gado</h2>
+      <p class="food-body">A delightful texture dance. Crisp vegetables, tofu, and tempeh embrace a creamy
+        peanut sauce infused with tamarind and chili's vibrant notes</p>
+    </div>
+  </div> -->
 
   <!--End of tabs category-->
   <!--Footer-->
@@ -782,18 +793,15 @@
         <div class="col-3">
           <h4>Warung Hati</h4>
         </div>
-        <div class="col text-end">
+        <div class="col text-end ">
           <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
             <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
           </a>
-          <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
+          <a href="https://www.facebook.com/profile.php?id=100080306831431" aria-label="go to facebook" class="text-decoration-none">
             <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
           </a>
           <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
             <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
-          </a>
-          <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
-            <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
           </a>
         </div>
         <hr class="mt-1" />
