--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <script src="https://kit.fontawesome.com/959a4c3f11.js" crossorigin="anonymous"></script>
   <title>Home</title>
+  <link rel="icon" href="img/LogoWarunghati-Transparant-01.png" type="image/x-icon">
 </head>
 
 <body>
@@ -59,6 +60,11 @@
           </a>
         </div>
         <div class="link-canvas">
+          <a href="aboutus.html">
+            <h1>About Us</h1>
+          </a>
+        </div>
+        <div class="link-canvas">
           <a href="menu.html">
             <h1>Menu</h1>
           </a>
@@ -66,11 +72,6 @@
         <div class="link-canvas">
           <a href="mealplans.html">
             <h1>Meal Plans</h1>
-          </a>
-        </div>
-        <div class="link-canvas">
-          <a href="aboutus.html">
-            <h1>About Us</h1>
           </a>
         </div>
       </div>
@@ -211,23 +212,33 @@
   </div>
   <!--End of Best Pick-->
   <!--Contact-->
-  <div class="container my-5 contact">
+  <div class="container my-5">
     <div class="row row-cols-1 row-cols-md-2">
       <div class="col">
         <div class="container">
           <h1 class="display-1">Get in touch</h1>
-          <p class="fs-5 text-secondary">If you have any questions or would like to get in touch with us, feel free to
-            contact us using the form beside or contact on below. We are ready to assist you with pleasure!</p>
-          <div class="container text-md-center">
-            <ul>
-              <li><i class="bi-telephone-fill contact-icon"></i>+6285333499996</li>
-              <li><i class="bi-envelope contact-icon"></i>warunghati.id@gmail.com</li>
+          <div class="container-fluid text-secondary">
+            <p>We're excited to hear from fellow food enthusiasts and health-conscious
+              individuals like you. At Warung Hati, we're committed to delivering the freshest, most delicious
+              Indonesian
+              cuisine made with organic and locally sourced ingredients. Whether you have questions, special requests,
+              or
+              just want to say hello, we'd love to connect. Reach out to us, we don’t bite :)</p>
+            <p>
+              Ready to embark on a culinary adventure that celebrates wellness, local flavors, and sustainability? Don't
+              hesitate to drop us a line—we can't wait to chat!
+            </p>
+          </div>
+          <div class="container d-flex aligns-items-center justify-content-center">
+            <ul class="">
+              <li><i class="bi-telephone-fill contact-icon"></i> +6285333499996</li>
+              <li><i class="bi-envelope contact-icon"></i> warunghati.id@gmail.com</li>
             </ul>
           </div>
         </div>
       </div>
       <div class="col px-5">
-        <form action="https://formsubmit.co/kejapitu@mailgolem.com" method="post">
+        <form action="https://formsubmit.co/warunghati.id@gmail.com" method="post">
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="name" class="col-form-label">Full Name</label>
@@ -274,14 +285,11 @@
           <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
             <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
           </a>
-          <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
+          <a href="https://www.facebook.com/profile.php?id=100080306831431" aria-label="go to facebook" class="text-decoration-none">
             <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
           </a>
           <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
             <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
-          </a>
-          <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
-            <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
           </a>
         </div>
         <hr class="mt-1" />
