--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
     defer></script>
   <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet"
     crossorigin="anonymous">
-  <link rel="icon" href="img/LogoWarunghati-Transparant-01.png" type="image/x-icon">
+  <link rel="icon" href="img/logo.png" type="image/x-icon">
   <title>About Us</title>
 </head>
 
