--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <script src="https://kit.fontawesome.com/959a4c3f11.js" crossorigin="anonymous"></script>
   <title>Home</title>
-  <link rel="icon" href="img/LogoWarunghati-Transparant-01.png" type="image/x-icon">
+  <link rel="icon" href="img/logo.png" type="image/x-icon">
 </head>
 
 <body>
