--- a/mealplans.html
+++ b/mealplans.html
@@ -15,7 +15,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="icon" href="img/LogoWarunghati-Transparant-01.png" type="image/x-icon">
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
 </head>
 
 <body>
