--- a/aboutus.html
+++ b/aboutus.html
@@ -412,7 +412,7 @@
           <a href="https://www.facebook.com/profile.php?id=100080306831431" aria-label="go to facebook" class="text-decoration-none">
             <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
           </a>
-          <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
+          <a href="https://www.instagram.com/warunghati/" aria-label="go to instagram" class="text-decoration-none">
             <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
           </a>
         </div>
