--- a/mealplans.html
+++ b/mealplans.html
@@ -200,15 +200,17 @@
                 </div>
                 <div class="col text-end ">
                     <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
-                      <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
+                        <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
                     </a>
-                    <a href="https://www.facebook.com/profile.php?id=100080306831431" aria-label="go to facebook" class="text-decoration-none">
-                      <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
+                    <a href="https://www.facebook.com/profile.php?id=100080306831431" aria-label="go to facebook"
+                        class="text-decoration-none">
+                        <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
                     </a>
-                    <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
-                      <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
+                    <a href="https://www.instagram.com/warunghati/" aria-label="go to instagram"
+                        class="text-decoration-none">
+                        <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
                     </a>
-                  </div>
+                </div>
                 <hr class="mt-1" />
                 <div class="text-center">
                     <p>@copyright by Warung Hati.</p>
