Change some word and enable captcha for contact us

--- a/aboutus.html
+++ b/aboutus.html
@@ -98,7 +98,7 @@
     <div class="container">
       <div class="abouttext">
         <p>In Bahasa, “Hati” means heart. It means we pour our hearts into every dish we create, and everything we do.
-          at Warung
+          At Warung
           Hati, we're more than a catering service; we're a journey driven by passion and purpose.
           Our story began in January 2017, when Farid, a passionate health activist in Surabaya, embarked on a mission
           to
@@ -111,7 +111,7 @@
           farmers and community.
         </p>
         <p>
-          Before the birth of Warung Hati, Farid was a co-founder of the Surabaya Sehat Community, a community that aims
+          Before the birth of Warung Hati, Farid was a co-founder of the Surabaya Sehat, an organization that aims
           to promote healthy lifestyles in the city. There, he shared his love for wholesome, healthy foods at the
           monthly
           Pasar Sehat, a vibrant monthly farmers market dedicated to promoting healthy and eco-friendly products.
@@ -263,11 +263,7 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <p>Research confirms that
-                    healthy food can uplift mood, and we're dedicated to making healthy synonymous with delicious. We
-                    advocate a diet comprising 85% plant-based and 15% meat protein by meticulously choosing
-                    non-saturated fats and organic protein sources to harmonize well-being and environmental
-                    sustainability.</p>
+                  <p>Research confirms that healthy food can uplift mood, and we're dedicated to making healthy synonymous with delicious. We utilize more plant-based food sources in our menu and deliberately handpick organic animal-based protein in moderate proportions.</p>
                 </div>
               </div>
             </div>
