--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
           <div class="container d-flex aligns-items-center justify-content-center">
             <ul class="">
               <li><i class="bi-telephone-fill contact-icon"></i> +6285333499996</li>
-              <li><i class="bi-envelope contact-icon"></i> warunghati.id@gmail.com</li>
+              <li><i class="bi-envelope contact-icon"></i> info@warunghati.com</li>
             </ul>
           </div>
         </div>
       </div>
       <div class="col px-5">
-        <form action="https://formsubmit.co/warunghati.id@gmail.com" method="post">
+        <form action="https://formsubmit.co/7fd8c23f5a0a8bb2e12d9cddfe8da65e" method="post">
           <div class="row">
             <div class="col-md-12 form-group">
               <label for="name" class="col-form-label">Full Name</label>
@@ -267,7 +267,6 @@
             <div class="col-md-12">
               <input type="submit" value="Send" class="btn btn-success rounded-0 py-2 px-4">
               <!-- <input type="hidden" name="next" value="http://localhost/Restaurant-site/"> -->
-              <input type="hidden" name="_captcha" value="false">
             </div>
           </div>
         </form>
