--- a/mealplans.html
+++ b/mealplans.html
@@ -100,7 +100,7 @@
                     </p>
                     <h3>Goal </h3>
                     <p class="desk-plan">Immune booster, increase energy and stamina</p>
-                    <h3>Menu </h3>
+                           <h3>Sample Menu</h3>
                     <p class="desk-plan">Nasi Pecel Kacang Mente with Organic Tempeh Bacem</p>
                     <h3>Include </h3>
                     <ul class="list-group my-2">
@@ -122,7 +122,7 @@
                         </p>
                         <h3>Goal </h3>
                         <p class="desk-plan">Detoxification, hormone balancing, and healing </p>
-                        <h3>Menu </h3>
+                               <h3>Sample Menu</h3>
                         <p class="desk-plan">Ketoprak bumbu mente with steamed organic tofu, tempeh, and boiled egg</p>
                         <h3>Include </h3>
                         <ul class="list-group my-2">
@@ -149,7 +149,7 @@
                         <h3>Goal </h3>
                         <p class="desk-plan">Weight loss, increased fullness, detoxification, and reduced craving for
                             unhealthy food</p>
-                        <h3>Menu </h3>
+                               <h3>Sample Menu</h3>
                         <p class="desk-plan">Gado-gado bumbu kenari with organic tofu and omega egg</p>
                         <h3>Include </h3>
                         <ul class="list-group my-2">
@@ -174,7 +174,7 @@
                         </p> -->
                         <h3>Goal </h3>
                         <p class="desk-plan">Nutrition booster, ASI booster, and post-birth care </p>
-                        <h3>Menu </h3>
+                               <h3>Sample Menu</h3>
                         <p class="desk-plan">Nasi timbel beras merah with Sundanese sayur asem and ungkep chicken</p>
                         <h3>Include </h3>
                         <ul class="list-group my-2">
@@ -198,7 +198,7 @@
                 <div class="col-3">
                     <h4>Warung Hati</h4>
                 </div>
-                <div class="col text-end ">
+                <div class="col text-end">
                     <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
                         <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
                     </a>
